--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="log_in">Log In</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="register_info">Register Info</string>
+    <string name="weight_kg">Weight (kg)</string>
+    <string name="age">Age</string>
+    <string name="height_in">Height (in)</string>
 </resources>
