--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="weight_kg">Weight (kg)</string>
     <string name="age">Age</string>
     <string name="height_in">Height (in)</string>
+    <string name="new_account">New Account</string>
+    <string name="title_activity_dashboard">Dashboard</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 </resources>
