--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="register_info">Register Info</string>
-    <string name="weight_kg">Weight (kg)</string>
+    <string name="weight_lbs">Weight (lbs)</string>
     <string name="age">Age</string>
     <string name="height_in">Height (in)</string>
     <string name="new_account">New Account</string>
