--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="steps">Steps</string>
     <string name="name">Name</string>
     <string name="calories">Calories</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
 </resources>
