--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="calories">Calories</string>
     <string name="cancel">Cancel</string>
     <string name="add">Add</string>
+    <string name="time">Time</string>
+    <string name="ml">mL</string>
 </resources>
