--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="height">Height</string>
     <string name="weight">Weight</string>
     <string name="bmi">BMI</string>
+    <string name="date">Date</string>
 </resources>
