--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="weight">Weight</string>
     <string name="bmi">BMI</string>
     <string name="date">Date</string>
+    <string name="heart_rate">Heart Rate</string>
 </resources>
