--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="bmi">BMI</string>
     <string name="date">Date</string>
     <string name="heart_rate">Heart Rate</string>
+    <string name="edit">Edit</string>
 </resources>
